# ChangeLog for dev-vcs/cvsps
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/cvsps/ChangeLog,v 1.3 2010/10/19 05:33:59 leio Exp $

  19 Oct 2010; Mart Raudsepp <leio@gentoo.org> cvsps-2.1.ebuild:
  Drop to ~mips

  03 Sep 2010; Christian Faulhammer <fauli@gentoo.org> cvsps-2.1-r1.ebuild:
  add ~x86-freebsd

  19 Jun 2010; Jonathan Callen <abcd@gentoo.org> +cvsps-2.1.ebuild,
  +cvsps-2.1-r1.ebuild, +files/cvsps-2.1-build.patch,
  +files/cvsps-2.1-solaris.patch, +metadata.xml:
  Move package from dev-util/cvsps to dev-vcs/cvsps

*cvsps-2.1-r1 (06 Mar 2010)

  06 Mar 2010; Fabian Groffen <grobian@gentoo.org> +cvsps-2.1-r1.ebuild,
  +files/cvsps-2.1-solaris.patch:
  Revbump for Prefix patches, transferred Prefix keywords, bug #307939

  10 Jun 2008; Raúl Porcel <armin76@gentoo.org> cvsps-2.1.ebuild:
  ia64 stable

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> cvsps-2.1.ebuild:
  keyword ~sparc-fbsd

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> cvsps-2.1.ebuild:
  keyword ~x86-fbsd

  24 Mar 2008; Raúl Porcel <armin76@gentoo.org> cvsps-2.1.ebuild:
  Add ~ia64 wrt #214464

  24 Mar 2008; Mike Frysinger <vapier@gentoo.org>
  +files/cvsps-2.1-build.patch, cvsps-2.1.ebuild:
  Respect user LDFLAGS.

  01 May 2007; Fabian Groffen <grobian@gentoo.org> cvsps-2.1.ebuild:
  Dropped ppc-macos keyword, see you in prefix, resolves bug #173882

  22 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> cvsps-2.1.ebuild:
  ppc stable, bug #173882

  10 Apr 2007; Jeroen Roovers <jer@gentoo.org> cvsps-2.1.ebuild:
  Stable for HPPA (bug #173882).

  10 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> cvsps-2.1.ebuild:
  Stable on sparc wrt #173882

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.

  21 Jan 2007; Alexander H. Færøy <eroyf@gentoo.org> cvsps-2.1.ebuild:
  Stable on MIPS.
