@@ -1,8 +1,8 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/cvsps/cvsps-2.1.ebuild,v 1.2 2010/10/19 05:33:59 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/cvsps/cvsps-2.1.ebuild,v 1.3 2011/04/20 12:44:43 jlec Exp $
 
-inherit eutils
+inherit eutils toolchain-funcs
 
 MY_P="${P/_/}"
 DESCRIPTION="Generates patchset information from a CVS repository"
@@ -15,6 +15,7 @@ KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~sparc-fbs
 IUSE=""
 
 DEPEND="sys-libs/zlib"
+RDPEPEND="${DEPEND}"
 
 S="${WORKDIR}/${MY_P}"
 
@@ -22,6 +23,7 @@ src_unpack() {
 	unpack ${A}
 	cd "${S}"
 	epatch "${FILESDIR}"/${P}-build.patch
+	tc-export CC
 }
 
 src_install() {
