@@ -1,6 +1,10 @@
 # ChangeLog for dev-vcs/cvsps
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/cvsps/ChangeLog,v 1.3 2010/10/19 05:33:59 leio Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/cvsps/ChangeLog,v 1.4 2011/04/20 12:44:43 jlec Exp $
+
+  20 Apr 2011; Justin Lecher <jlec@gentoo.org> cvsps-2.1.ebuild,
+  cvsps-2.1-r1.ebuild:
+  Respect CC, #243992
 
   19 Oct 2010; Mart Raudsepp <leio@gentoo.org> cvsps-2.1.ebuild:
   Drop to ~mips
